# docs/swagger.yaml
@@ -520,6 +520,40 @@ paths:
       tags:
       - expenses
   /expenses/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an expense for the authenticated user
+      parameters:
+      - description: Expense ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/utils.Response-models_Expense'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/utils.Response-any'
+      security:
+      - BearerAuth: []
+      summary: Delete an expense
+      tags:
+      - expenses
     get:
       consumes:
       - application/json
